# langProBe

./: .gitignore  .gitmodules  LICENSE  README.md  generate_files.py  pyproject.toml  pyrightconfig.json  requirements.txt
evaluation_llama3170b/: HeartDiseaseBench50_ChainOfThought_BootstrapFewShot.outputs  HeartDiseaseBench50_ChainOfThought_BootstrapFewShot.traces  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotD8.outputs  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotD8.traces  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotD8NoLabeled.outputs  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotD8NoLabeled.traces  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotWithRandomSearch.outputs  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotWithRandomSearch.traces  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotWithRandomSearchD8.outputs  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotWithRandomSearchD8.traces  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotWithRandomSearchD8NoLabeled.outputs  HeartDiseaseBench50_ChainOfThought_BootstrapFewShotWithRandomSearchD8NoLabeled.traces  HeartDiseaseBench50_ChainOfThought_MIPROv2.outputs  HeartDiseaseBench50_ChainOfThought_MIPROv2.traces  HeartDiseaseBench50_ChainOfThought_MIPROv2D8BigSearch.outputs  HeartDiseaseBench50_ChainOfThought_MIPROv2D8BigSearch.traces  HeartDiseaseBench50_ChainOfThought_MIPROv2D8BigSearchNoLabeled.outputs  HeartDiseaseBench50_ChainOfThought_MIPROv2D8BigSearchNoLabeled.traces  HeartDiseaseBench50_ChainOfThought_None.traces  HeartDiseaseBench50_HeartDiseaseClassify_MIPROv2.outputs  (+94 more)
(+121 files in other folders)
